--- a/frontend/user/src/pages/restaurant/RestaurantDetail.module.css
+++ b/frontend/user/src/pages/restaurant/RestaurantDetail.module.css
@@ -439,6 +439,7 @@
         .info-item {
             display: flex;
             justify-content: space-between;
+             align-items: center; 
             padding: 16px 0;
             border-bottom: 1px solid #e9ecef;
         }
@@ -452,8 +453,13 @@
             color: #212529;
         }
 
+        /* RestaurantDetail.module.css */
         .info-value {
-            color: #495057;
+            display: flex;
+            flex-direction: column;
+            /* 세로 방향 */
+            gap: 4px;
+            /* 간격 */
         }
 
         /* Right Sidebar */
